fixed text overflow on cards - css

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -11,6 +11,7 @@ body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    color: rgb(255, 255, 255);
 }
 
 body::-webkit-scrollbar {
