--- a/public/static/css/watch-card.css
+++ b/public/static/css/watch-card.css
@@ -63,6 +63,10 @@
     filter: brightness(110%);
 }
 
+.child-card-overview {
+    overflow-y: auto;
+}
+
 .tab {
     overflow: hidden;
 }
